@@ -1,7 +1,6 @@
 THINGS TO FIX BEFORE RELEASE
 ----------------------------
    
-    - Memory counting 
     - Fix /unkline routines to operate happily with the new conf parser.
     - Fix our broken-ass conf structure handling such that we check
       on the existence of pointers before attempting to use them.
